tests/error/poly_errors/polymorphic_entrypoint.err
Error: Invalid entry point (at $FILE:14:0)
   | 
12 | 
13 | @guppy
14 | def main(_: Struct[F]) -> float:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
15 |     return F
   | ^^^^^^^^^^^^ Function `main` is not a valid compilation entry point since
   |              the value of its generic parameter `F` is not known

Guppy compilation failed due to 1 previous error
